# iot-project

ARDUINO_MEGA/: ARDUINO_MEGA.ino
ESP8266/: ESP8266.ino
sns/: README.md  pubspec.yaml
sns/.github/workflows/: main.yaml
sns/android/app/: build.gradle
sns/android/app/src/main/: AndroidManifest.xml
sns/ios/Runner/: Info.plist
sns/ios/Runner.xcodeproj/: project.pbxproj
sns/lib/: bootstrap.dart  main_development.dart  main_production.dart
sns/lib/app/view/: app.dart
sns/lib/counter/view/: counter_page.dart
sns/lib/home/cubit/: home_cubit.dart  home_state.dart
sns/lib/home/view/: home_page.dart  home_view.dart
sns/lib/sns_data/: sns_data.dart
sns/lib/sns_data/bloc/: sns_data_bloc.dart  sns_data_event.dart  sns_data_state.dart
sns/lib/sns_data/view/: sns_data_view.dart  view.dart
sns/lib/sns_graph/: sns_graph.dart
sns/lib/sns_graph/bloc/: sns_graph_bloc.dart  sns_graph_event.dart  sns_graph_state.dart
sns/lib/sns_graph/view/: sns_graph_view.dart  view.dart
sns/lib/sns_graph/widgets/: climate_graph.dart  widgets.dart
sns/macos/Runner.xcodeproj/: project.pbxproj
sns/test/app/view/: app_test.dart
sns/test/counter/cubit/: counter_cubit_test.dart
sns/test/counter/view/: counter_page_test.dart
sns/test/helpers/: pump_app.dart
sns/web/: index.html  manifest.json
sns/windows/: CMakeLists.txt
sns/windows/runner/: Runner.rc  main.cpp
sns_back/: .env  Cargo.toml
sns_back/src/: main.rs
sns_back/src/models/: climate.rs  mod.rs
sns_mqtt_sub/: .env  Cargo.toml
sns_mqtt_sub/src/: main.rs
(+6 files in other folders)
